# Robofactor

./: .env.example  .gitignore  README.md  dum_ahh_file.py  pyproject.toml
app/: main.py
robofactor/linting/: auto_lint.py  dum_ahh_file.py
robofactor/refactoring/: extractor.py
tests/: test_auto_lint.py  test_extractor.py
